@@ -1,3 +1,8 @@
+2005-12-09 Caleb Moore <c.moore@student.unsw.edu.au>
+	
+	* rsvg-shapes.c: don't attempt to round courners at all in a rect unless dx > 0 && dy > 0
+	
+
 2005-12-07 Ray Strode <rstrode@redhat.com>
 
 	* rsvg-base.c: remove the push call that's more probably wrong and 
